--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-pandas
-numpy
-xgboost~=1.3.1
+pandas~=1.3.3
+xgboost~=1.3.3
 sklearn~=0.0
-scikit-learn~=0.24.0
-openpyxl~=3.0.5
+scikit-learn~=0.24.2
 requests~=2.25.1
-beautifulsoup4~=4.9.3
+selenium~=3.141.0
+openpyxl~=3.0.8
